--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 
   web_socket_channel: ^2.4.0
   random_string: ^2.1.0
+#  flutter_vlc_player: ^7.1.5
+  fijkplayer_new: ^0.10.2
 
 dev_dependencies:
   flutter_test:
