--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.6.5
   flutter_smart_dialog: ^4.5.3+5
   flutter_screenutil: ^5.5.2
+  flutter_switch: ^0.3.2
   #  json工具
   json_annotation: ^4.4.0
 
