--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
 
   web_socket_channel: ^2.4.0
   random_string: ^2.1.0
-#  flutter_vlc_player: ^7.1.5
+  #  flutter_vlc_player: ^7.1.5
   fijkplayer_new: ^0.10.2
+  r_get_ip: ^0.1.1
 
 dev_dependencies:
   flutter_test:
