--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=2.17.1 <=3.0.5"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,24 +37,26 @@ dependencies:
   flutter_smart_dialog: ^4.5.3+5
   flutter_screenutil: ^5.5.2
   flutter_switch: ^0.3.2
-  #  json工具
-  json_annotation: ^4.4.0
-
   logger: ^1.1.0
 
   web_socket_channel: ^2.4.0
   random_string: ^2.1.0
-  #  flutter_vlc_player: ^7.1.5
-  fijkplayer_new: ^0.10.2
   r_get_ip: ^0.1.1
+  memory_cache: ^1.2.0
+  fijkplayer_new: ^0.10.2
+  json_annotation: ^4.8.1
+#  fijkplayer:
+#    git:
+#      url: https://github.com/befovy/fijkplayer.git
+#      ref: develop # can be replaced to branch or tag name
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   built_value_generator: ^8.2.0
   retrofit_generator: ^4.0.1
-  build_runner: ^2.1.10
-  json_serializable: ^6.1.6
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
   flutter_lints: ^2.0.0
 
 flutter:
